# tp-cripto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GMatrices.c  azzahra.c  commons.c  commons.h  crypto_service.c  encryption_main.c  image_manipulation.c  main.c  main.h  matrices.c  matrices.h  random.c  random.h  readme.md  readme.txt  shamir.c  shamir.h  steganography.c  utils.c
include/: Gmatrices.h  azzahra.h  crypto_service.h  image_manipulation.h  main.h  matrices.h  steganography.h  utils.h
src/: CMakeLists.txt  azzahra.c  crypto_service.c  image_manipulation.c  main.c  matrices.c  random.c  steganography.c  utils.c
src/include/: azzahra.h  crypto_service.h  image_manipulation.h  main.h  matrices.h  random.h  steganography.h  utils.h
src/tests/: azzahra_test.c  azzahra_test.h  image_manipulation_test.c  image_manipulation_test.h  main_test.c  main_test.h  matrices_test.c  matrices_test.h  steganography_test.c  steganography_test.h  test_all.c  test_all.h  util.c  util.h
tests/: azzahra_test.c  azzahra_test.h  image_manipulation_test.c  image_manipulation_test.h  main_test.c  main_test.h  matrices_test.c  matrices_test.h  steganography_test.c  steganography_test.h  util.c  util.h
